--- a/src/css/global.css
+++ b/src/css/global.css
@@ -27,3 +27,14 @@ button:hover{
 button{
   transition: all 0.3s ease 0s;
 }
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+*::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+* {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+}
