dev: bug fix and preloader

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -2,6 +2,22 @@
 @import "../navBar/navBar.css";
 @import "/src/components/forum/forum.css";
 
+
+.preloader-container {
+  background-color: white;
+  height: 100vh;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.preloader-container h2 {
+  font-weight: 200;
+  font-size: 4rem;
+  margin-top: 2rem;
+}
+
 marquee {
   width: 100vw;
   height: 44px;
@@ -67,6 +83,12 @@ marquee {
 }
 
 .hero-button {
+  outline: none;
+  border: none;
+  text-decoration: none;
+  color: white;
+  font-size: 1em;
+  font-weight: 600;
   background: linear-gradient(93.97deg, #D9D9D9 -173.88%, rgba(173, 173, 173, 0) 214.31%);
   -webkit-backdrop-filter: blur(2px);
           backdrop-filter: blur(2px);
