--- a/src/pages/explore-css/explore.css
+++ b/src/pages/explore-css/explore.css
@@ -64,13 +64,13 @@
   padding-bottom: 3rem;
 }
 .explore-content-section .explore-top-right {
-  background-image: url(../../../public/explore-1.jpg);
+  background-image: url(../../../public/explore-1.png);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
 }
 .explore-content-section .explore-bottom-left {
-  background-image: url(../../../public/explore-2.jpg);
+  background-image: url(../../../public/explore-2.png);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
