--- a/src/css/index.css
+++ b/src/css/index.css
@@ -142,7 +142,7 @@ marquee {
   p {
     padding-top: 2rem;
     padding-bottom: 1rem;
-    margin: 0 !important;
+    /* margin: 0 !important; */
   }
 }
 .intro-section-container {
