--- a/src/navBar/navBar.css
+++ b/src/navBar/navBar.css
@@ -1,13 +1,4 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat&family=Poppins&display=swap");
-@-webkit-keyframes nav-animation {
-  0% {
-    transform: translateY(-100%);
-    opacity: 0;
-  }
-  100% {
-    transform: translateY(0%);
-  }
-}
 @keyframes nav-animation {
   0% {
     transform: translateY(-100%);
@@ -24,9 +15,14 @@
 }
 
 .navbar {
-  padding-top: 2em;
-  -webkit-animation: nav-animation 300ms ease-in-out;
-          animation: nav-animation 300ms ease-in-out;
+  position: fixed;
+  top: 0;
+  z-index: 5000;
+  padding: 10px 25px;
+  margin: 5px;
+  border-radius: 6px;
+  width: calc(100% - 10px);
+  transition: all 0.3s ease;
 }
 .navbar .logoimage {
   height: 30px;
@@ -40,7 +36,10 @@
 }
 .navbar .container {
   display: flex;
+  align-items: center;
   place-content: space-between;
+  animation: nav-animation 300ms ease-in-out;
+  border-radius: 12px;
 }
 .navbar .mobile-menu {
   cursor: pointer;
@@ -60,9 +59,9 @@ ul {
 nav.menu-button {
   display: block;
   background: linear-gradient(279.22deg, rgba(153, 153, 153, 0.28) 7.79%, rgba(0, 0, 0, 0.1624) 133.84%);
-  -webkit-backdrop-filter: blur(25px);
-          backdrop-filter: blur(25px);
+  backdrop-filter: blur(25px);
   box-shadow: 0px 4px 41px 7px rgba(0, 0, 0, 0.25);
+  height: 100vh;
 }
 
 nav {
@@ -71,7 +70,6 @@ nav {
   width: 40%;
   right: 0;
   top: 0;
-  height: 100vh;
   padding: 1em;
 }
 nav ul {
@@ -100,8 +98,12 @@ nav li a:hover {
 }
 
 @media only screen and (min-width: 840px) {
+  .navbar {
+    backdrop-filter: blur(8px);
+    padding: 5px 25px;
+  }
   .mobile-menu,
-.mobile-menu-exit {
+  .mobile-menu-exit {
     display: none;
   }
   .navbar .container {
@@ -109,11 +111,13 @@ nav li a:hover {
     grid-template-columns: 180px auto;
     justify-content: space-between;
     height: 70px;
-    margin-top: 1.5em;
   }
   .navbar .container .logoimage {
-    height: 30px;
+    height: 100%;
     width: 8em;
+    display: flex;
+    align-items: center;
+    justify-content: center;
   }
   .navbar .container .logoimage img {
     width: 100%;
@@ -125,7 +129,8 @@ nav li a:hover {
     position: unset;
     height: auto;
     width: 100%;
-    padding: 1em 0 0 0;
+    backdrop-filter: none;
+    box-shadow: none;
     font-size: 1.2em;
   }
   .navbar nav ul {
@@ -140,4 +145,6 @@ nav li a:hover {
     margin-top: 0;
     padding: 0;
   }
-}/*# sourceMappingURL=navBar.css.map */
+}
+
+/*# sourceMappingURL=navBar.css.map */
