--- a/src/navBar/navBar.css
+++ b/src/navBar/navBar.css
@@ -20,8 +20,9 @@
   z-index: 5000;
   padding: 10px 25px;
   margin: 5px;
-  border-radius: 6px;
+  border-radius: 8px;
   width: calc(100% - 10px);
+  box-shadow: 0 0 3px wheat;
   transition: all 0.3s ease;
 }
 .navbar .logoimage {
@@ -39,7 +40,6 @@
   align-items: center;
   place-content: space-between;
   animation: nav-animation 300ms ease-in-out;
-  border-radius: 12px;
 }
 .navbar .mobile-menu {
   cursor: pointer;
@@ -79,14 +79,29 @@ nav li a {
   color: white;
   text-decoration: none;
   display: block;
-  padding: 0.5em;
+  padding: 0.5em 0.8em;
   font-size: 1.3em;
   text-align: right;
-  width: 106px;
+  width: fit-content;
+  position: relative;
 }
-nav li a:hover {
-  font-weight: bold;
-  transition: 0.3s;
+nav li a:not(.active-link):hover::after {
+  display: none;
+  content: "";
+  position: absolute;
+  background-color: aqua;
+  width: 70%;
+  height: 3px;
+  bottom: -3px;
+  border-radius: 5px;
+  animation: max-width-animation 0.4s ease-in-out forwards;
+}
+
+.nav-link.active-link {
+  background-color: #0f0f0f;
+  color: white;
+  border-radius: 6px;
+  cursor: default;
 }
 
 .mobile-menu-exit {
@@ -107,8 +122,7 @@ nav li a:hover {
     display: none;
   }
   .navbar .container {
-    display: grid;
-    grid-template-columns: 180px auto;
+    display: flex;
     justify-content: space-between;
     height: 70px;
   }
@@ -128,7 +142,7 @@ nav li a:hover {
     background: none;
     position: unset;
     height: auto;
-    width: 100%;
+    width: fit-content;
     backdrop-filter: none;
     box-shadow: none;
     font-size: 1.2em;
@@ -138,12 +152,24 @@ nav li a:hover {
   }
   .navbar nav a {
     font-size: 1em;
-    padding: 0.1em 1em;
+    padding: 0.3em 1em;
     position: relative;
+    width: fit-content;
+  }
+  .navbar nav li a:hover::after {
+    display: block;
   }
   .navbar nav ul {
     margin-top: 0;
     padding: 0;
+  }
+}
+@keyframes max-width-animation {
+  0% {
+    max-width: 0;
+  }
+  100% {
+    max-width: 100%;
   }
 }
 
