--- a/src/css/global.css
+++ b/src/css/global.css
@@ -1,27 +1,30 @@
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 
 * {
   scroll-behavior: smooth;
-  font-family: "Montserrat";
+  font-family: 'Montserrat';
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 
-body {
+body{
   overflow-x: hidden;
 }
 
-button:hover {
+button:hover{
   box-shadow: var(--shadow);
   cursor: pointer;
   box-shadow: 0px 7px 10px rgba(80, 80, 80, 0.4);
   color: #fff;
   transform: translatex(7px);
-  transition: all 0.3s ease 0s;
+  transition: all 0.3s ease 0s;  
 }
 
-button {
+
+
+button{
   transition: all 0.3s ease 0s;
 }
 
@@ -32,6 +35,6 @@ button {
 
 /* Hide scrollbar for IE, Edge and Firefox */
 * {
-  -ms-overflow-style: none; /* IE and Edge */
-  scrollbar-width: none; /* Firefox */
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
 }
