--- a/src/navBar/navBar.scss
+++ b/src/navBar/navBar.scss
@@ -1,11 +1,12 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat&family=Poppins&display=swap");
 
+
 @keyframes nav-animation {
-  0% {
+  0%{
     transform: translateY(-100%);
     opacity: 0;
   }
-  100% {
+  100%{
     transform: translateY(0%);
   }
 }
@@ -17,15 +18,8 @@
 }
 
 .navbar {
-  position: fixed;
-  top: 0;
-  z-index: 5000;
-  padding: 10px 25px;
-  margin: 8px;
-  border-radius: 8px;
-  width: calc(100% - 16px);
-  box-shadow: 0 0 3px wheat;
-  transition: all 0.3s ease;
+  padding-top:  2em;
+  animation: nav-animation 300ms ease-in-out;
 
   .logoimage {
     height: 30px;
@@ -41,11 +35,8 @@
   }
 
   .container {
-    display: flex;
-    align-items: center;
+    display: flex;  
     place-content: space-between;
-    animation: nav-animation 300ms ease-in-out;
-
     // background-color: black;
   }
 
@@ -67,14 +58,9 @@ ul {
 
 nav.menu-button {
   display: block;
-  background: linear-gradient(
-    279.22deg,
-    rgba(153, 153, 153, 0.28) 7.79%,
-    rgba(0, 0, 0, 0.1624) 133.84%
-  );
+  background: linear-gradient(279.22deg, rgba(153, 153, 153, 0.28) 7.79%, rgba(0, 0, 0, 0.1624) 133.84%);
   backdrop-filter: blur(25px);
   box-shadow: 0px 4px 41px 7px rgba(0, 0, 0, 0.25);
-  height: 100vh;
 }
 
 nav {
@@ -84,6 +70,7 @@ nav {
   right: 0;
   top: 0;
 
+  height: 100vh;
   padding: 1em;
 
   ul {
@@ -95,32 +82,17 @@ nav {
       color: white;
       text-decoration: none;
       display: block;
-      padding: 0.5em 0.8em;
+      padding: 0.5em;
       font-size: 1.3em;
       text-align: right;
-      width: fit-content;
-      position: relative;
+      width: 106px;
 
-      &:not(.active-link):hover::after {
-        display: none;
-        content: "";
-        position: absolute;
-        background-color: aqua;
-        width: 70%;
-        height: 3px;
-        bottom: -3px;
-        border-radius: 5px;
-        animation: max-width-animation 0.4s ease-in-out forwards;
+      &:hover {
+        font-weight: bold;
+        transition: 0.3s;
       }
     }
   }
-}
-
-.nav-link.active-link {
-  background-color: #0f0f0f;
-  color: white;
-  border-radius: 6px;
-  cursor: default;
 }
 
 .mobile-menu-exit {
@@ -132,10 +104,7 @@ nav {
 }
 
 @media only screen and (min-width: 840px) {
-  .navbar {
-    backdrop-filter: blur(8px);
-    padding: 5px 25px;
-  }
+
 
   .mobile-menu,
   .mobile-menu-exit {
@@ -143,16 +112,15 @@ nav {
   }
 
   .navbar .container {
-    display: flex;
+    display: grid;
+    grid-template-columns: 180px auto;
     justify-content: space-between;
     height: 70px;
+    margin-top: 1.5em;
 
     .logoimage {
-      height: 100%;
+      height: 30px;
       width: 8em;
-      display: flex;
-      align-items: center;
-      justify-content: center;
       // margin-left: 3em;
 
       img {
@@ -167,9 +135,8 @@ nav {
     background: none;
     position: unset;
     height: auto;
-    width: fit-content;
-    backdrop-filter: none;
-    box-shadow: none;
+    width: 100%;
+    padding: 1em 0 0 0;
     // margin-right: 3em;
     font-size: 1.2em;
 
@@ -179,29 +146,13 @@ nav {
 
     a {
       font-size: 1em;
-      padding: 0.3em 1em;
+      padding: 0.1em 1em;
       position: relative;
-      width: fit-content;
-    }
-
-    li a {
-      &:hover::after {
-        display: block;
-      }
     }
 
     ul {
       margin-top: 0;
       padding: 0;
     }
-  }
-}
-
-@keyframes max-width-animation {
-  0% {
-    max-width: 0;
-  }
-  100% {
-    max-width: 100%;
   }
 }
